# python-eetlijst

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  eetlijst.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: lint.yml  test.yml
eetlijst/: __init__.py
examples/: diner.py  dinner.py  noticeboard.py  session.py
tests/: test1.py  test_module.py
tests/data/: test_login_failed.html  test_main.html  test_main2.html  test_main3.html  test_main4.html
