[tool.black]
exclude = '''
(
    \.git/
  | \.vscode/
  | env/
)
'''
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"

[tool.poetry]
authors = ["Bas Stottelaar <basstottelaar@gmail.com>"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Home Automation",
    "Topic :: System :: Networking",
]
description = "Unofficial Python API to interface with Eetlijst.nl"
homepage = "https://github.com/basilfx/python-eetlijst"
include = [
    "LICENSE.md",
]
license = "GPL-3.0"
name = "python-eetlijst"
packages = [
    { include = "eetlijst" }
]
readme = "README.md"
repository = "https://github.com/basilfx/python-eetlijst"
version = "2.0.0"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
pytz = "^2022.6"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
flake8-mypy = "^17.8.0"
pytest = "^7.2.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
